[package]
name = "deb-rs"
version = "0.1.0"
authors = ["trickypr <trickypr@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["v4"] }
yaml-rust = "0.4"
cmd_lib = "0.8.5"
glob = "0.3"
